Add Taoyuan LTC dataset and align service definitions

--- a/Sidebar.html
+++ b/Sidebar.html
@@ -1201,7 +1201,7 @@
           </div>
           <div id="transportServiceWrap" style="display:none; margin-top:8px;">
             <div class="titlebar">
-              <label>交通服務項目（多選）</label>
+              <label>交通接送項目（多選）</label>
               <button class="small" type="button" onclick="resetTransportPhrases()">重新套用片語</button>
             </div>
             <div id="transportServiceList" class="home-care-grid"></div>
@@ -1334,7 +1334,7 @@
       <div class="grid2">
         <div id="short_care_wrap"><label>照顧服務：</label><textarea id="short_care" placeholder="填寫欄位"></textarea></div>
         <div id="short_prof_wrap"><label>專業服務：</label><textarea id="short_prof" placeholder="填寫欄位"></textarea></div>
-        <div id="short_car_wrap"><label>交通服務：</label><textarea id="short_car"  placeholder="填寫欄位"></textarea></div>
+        <div id="short_car_wrap"><label>交通接送：</label><textarea id="short_car"  placeholder="填寫欄位"></textarea></div>
         <div id="short_resp_wrap"><label>喘息服務：</label><textarea id="short_resp" placeholder="填寫欄位"></textarea></div>
         <div id="short_access_wrap"><label>無障礙及輔具：</label><textarea id="short_access" placeholder="填寫欄位"></textarea></div>
         <div id="short_meal_wrap"><label>營養送餐：</label><textarea id="short_meal" placeholder="填寫欄位"></textarea></div>
@@ -1346,7 +1346,7 @@
       <div class="grid2">
         <div id="mid_care_wrap"><label>照顧服務：</label><textarea id="mid_care" placeholder="填寫欄位"></textarea></div>
         <div id="mid_prof_wrap"><label>專業服務：</label><textarea id="mid_prof" placeholder="填寫欄位"></textarea></div>
-        <div id="mid_car_wrap"><label>交通服務：</label><textarea id="mid_car"  placeholder="填寫欄位"></textarea></div>
+        <div id="mid_car_wrap"><label>交通接送：</label><textarea id="mid_car"  placeholder="填寫欄位"></textarea></div>
         <div id="mid_resp_wrap"><label>喘息服務：</label><textarea id="mid_resp" placeholder="填寫欄位"></textarea></div>
         <div id="mid_access_wrap"><label>無障礙及輔具：</label><textarea id="mid_access" placeholder="填寫欄位"></textarea></div>
         <div id="mid_meal_wrap"><label>營養送餐：</label><textarea id="mid_meal" placeholder="填寫欄位"></textarea></div>
@@ -3169,7 +3169,7 @@
     }
 
     /* ===== 四-(四) 社會支持：原程式 ===== */
-    const FORMAL = ['居家服務','專業服務','日間照顧','喘息服務','交通服務','無障礙及輔具','營養送餐'];
+    const FORMAL = ['居家服務','專業服務','日間照顧','喘息服務','交通接送','無障礙及輔具','營養送餐'];
     const HOME_CARE_ITEMS = [
       {
         code: 'BA01',
@@ -3200,7 +3200,7 @@
         long: '建立穩定飲食支持機制，確保個案長期營養狀態良好，促進生活品質。'
       },
       {
-        code: 'BA05-1',
+        code: 'BA05',
         name: '餐食照顧',
         short: '協助個案處理餐食，確保用餐便利與安全。',
         mid: '持續安排餐食照顧，幫助個案維持飲食規律與營養。',
@@ -3219,6 +3219,20 @@
         short: '協助進行足部清潔與照護，改善足部舒適與行動便利。',
         mid: '持續安排足部照護，預防感染或相關併發症，維持健康。',
         long: '確保持續照護，讓個案足部健康穩定，提升生活功能與行動力。'
+      },
+      {
+        code: 'BA09',
+        name: '到宅沐浴車服務—第一型',
+        short: '安排到宅沐浴車（第一型），由專業人員與設備協助安全完成全身沐浴與清潔。',
+        mid: '持續規劃第一型到宅沐浴車服務，確保定期洗浴、觀察皮膚狀況並降低跌倒風險。',
+        long: '建立穩定的第一型到宅沐浴車服務流程，讓個案長期維持衛生習慣並減輕照顧者負擔。'
+      },
+      {
+        code: 'BA09a',
+        name: '到宅沐浴車服務—第二型',
+        short: '安排到宅沐浴車（第二型），提供高照護需求者安全完整的沐浴與清潔支持。',
+        mid: '持續使用第二型沐浴車服務，配合雙人協助與專業設備維持皮膚健康與舒適。',
+        long: '長期串接第二型到宅沐浴車服務，確保高需求個案規律沐浴並維持身體潔淨。'
       },
       {
         code: 'BA10',
@@ -3256,39 +3270,25 @@
         long: '透過長期就醫支持，維持個案健康穩定，減少延誤風險。'
       },
       {
-        code: 'BA15-1',
-        name: '家務協助（一般）',
+        code: 'BA15',
+        name: '家務協助',
         short: '協助處理家務，改善生活環境與便利性。',
         mid: '持續提供家務支持，確保日常生活穩定與整潔。',
         long: '建立長期家務支持，讓個案生活環境持續舒適與安全。'
       },
       {
-        code: 'BA15-2',
-        name: '家務協助（進階）',
-        short: '協助進階家務工作，改善居家生活便利。',
-        mid: '持續安排家務支持，穩定個案生活秩序與舒適度。',
-        long: '透過長期支持，確保持續改善居家環境品質。'
-      },
-      {
-        code: 'BA16-1',
-        name: '代購／代領／代送（自用）',
-        short: '協助代購與代送個人物品，滿足即時生活需求。',
-        mid: '持續提供代購支持，維持日常便利與穩定。',
-        long: '建立穩定支持系統，確保持續生活便利性。'
-      },
-      {
-        code: 'BA16-2',
-        name: '代購／代領／代送（代購）',
-        short: '協助代購物品，減輕個案與家屬負擔。',
-        mid: '持續安排代購服務，確保生活所需穩定供應。',
-        long: '透過長期支持，確保生活品質穩定與便利。'
+        code: 'BA16',
+        name: '代購或代領或代送服務',
+        short: '協助代購、代領或代送生活物品，滿足即時需求並降低外出風險。',
+        mid: '持續提供代購支持，確保生活所需穩定供應。',
+        long: '透過長期協助，維持生活便利並減輕個案與家屬負擔。'
       },
       {
         code: 'BA17a',
-        name: '人工氣道管內抽吸',
-        short: '協助人工氣道抽吸，改善呼吸道通暢與舒適。',
-        mid: '持續安排抽吸支持，確保呼吸道暢通與健康。',
-        long: '透過長期呼吸支持，維持個案呼吸安全與生活品質。'
+        name: '人工氣道管內分泌物抽吸',
+        short: '協助進行人工氣道管內分泌物抽吸，改善呼吸道通暢與舒適。',
+        mid: '持續安排人工氣道分泌物抽吸支持，確保呼吸道暢通與健康。',
+        long: '透過長期呼吸照護，維持個案呼吸安全並減少併發症。'
       },
       {
         code: 'BA17b',
@@ -3299,10 +3299,10 @@
       },
       {
         code: 'BA17c',
-        name: '尿管及鼻胃管清潔固定',
-        short: '協助管路清潔與固定，降低感染風險。',
+        name: '尿管及鼻胃管之清潔與固定',
+        short: '協助尿管及鼻胃管的清潔與固定，降低感染與滑脫風險。',
         mid: '持續安排管路照護，維持穩定使用。',
-        long: '透過長期照護，減少併發症並確保生活品質。'
+        long: '透過長期管路照護，減少併發症並確保生活品質。'
       },
       {
         code: 'BA17d1',
@@ -3365,18 +3365,102 @@
     HOME_CARE_ITEMS.forEach(item => { HOME_CARE_MAP[item.code] = item; });
     const DAY_CARE_ITEMS = [
       {
-        code: 'BD00A',
-        name: '日間照顧（全日）',
-        short: '個案將參與全日型日間照顧服務，接受生活照顧（如更衣、如廁、整潔協助）、健康促進活動（伸展、肌力及平衡訓練）、以及文康休閒（團體遊戲、藝能活動）。同時提供午餐與餐後口腔清潔，協助其建立規律出席習慣，逐步適應團體生活，並減輕主要照顧者的即時照顧壓力。',
-        mid: '個案已能穩定參與全日型日間照顧，每日完成生活照顧與健康促進活動，持續參與社交及文康休閒，促進人際互動與認知參與。服務單位專業人員將定期追蹤健康狀況（如體重、血壓、情緒狀態），適度調整活動內容，並提供家屬諮詢與照護指導。',
-        long: '個案長期持續參加全日型日間照顧，維持生活自理功能與情緒穩定。透過規律健康促進活動延緩功能退化，並藉文康活動支持認知與社交能力。服務單位將建立固定出席與健康追蹤紀錄，並定期提供照護成果報告與家屬回饋，確保服務品質並減輕主要照顧者長期負擔。'
+        code: 'BB01',
+        name: '日間照顧（全日）—第一型',
+        short: '安排第一型全日型日間照顧，依照評估提供生活照顧、健康促進與社交活動，協助建立規律作息並減輕照顧者壓力。',
+        mid: '持續參與第一型全日日照，穩定完成生活照護與團體活動，團隊定期追蹤健康變化並與家屬討論調整。',
+        long: '長期規律使用第一型全日日照，維持生活功能與情緒穩定，建立完整紀錄並與家庭合作支持照護。'
       },
       {
-        code: 'BD00B',
-        name: '日間照顧（半日）',
-        short: '個案將參與半日型日間照顧服務，接受生活照顧（如移位、如廁、整潔協助）、基本健康促進（伸展、平衡訓練）、及文康休閒活動。若包含餐食，將協助進食並完成餐後口腔清潔，幫助個案逐步適應半日型服務，並建立基本出席與參與模式。',
-        mid: '個案已能穩定出席半日型日間照顧，持續完成生活照顧與健康促進訓練，並參與社交及文康休閒活動。透過專業人員的陪伴與指導，提升生活節奏感與情緒穩定性，並協助家屬理解日常照護重點。',
-        long: '個案長期持續使用半日型日間照顧，維持生活自理度並延緩功能退化。透過規律健康促進與文康活動，保持身心健康與社交參與。服務單位將定期提供健康與活動參與紀錄，並持續與家屬溝通，支持其長期照護安排。'
+        code: 'BB02',
+        name: '日間照顧（半日）—第一型',
+        short: '安排第一型半日型日間照顧，提供生活照顧、健康促進及社交互動，協助建立固定出席並給予照顧者喘息。',
+        mid: '持續參與第一型半日日照，穩定完成照護與訓練，團隊追蹤健康狀態並與家屬分享照護重點。',
+        long: '長期使用第一型半日日照，維持作息與社交參與，並透過紀錄與回饋支持家庭照護安排。'
+      },
+      {
+        code: 'BB03',
+        name: '日間照顧（全日）—第二型',
+        short: '安排第二型全日型日間照顧，強化生活照顧、復能訓練與團體參與，協助高需求者維持穩定作息。',
+        mid: '持續參與第二型全日日照，依功能狀態調整活動強度，團隊定期與家屬檢視照顧成果。',
+        long: '長期使用第二型全日日照，建立完整照護紀錄並維持自理度與情緒穩定，提供家屬長期支持。'
+      },
+      {
+        code: 'BB04',
+        name: '日間照顧（半日）—第二型',
+        short: '安排第二型半日型日間照顧，結合生活照護與健康促進，協助高需求者在安全環境中參與團體。',
+        mid: '持續參與第二型半日日照，依個案狀態調整訓練與活動，並由團隊提供照護建議。',
+        long: '長期規律使用第二型半日日照，維持生活節奏與社交參與，並與家屬共同檢視照護策略。'
+      },
+      {
+        code: 'BB05',
+        name: '日間照顧（全日）—第三型',
+        short: '安排第三型全日型日間照顧，提供密集生活照護、復能及健康監測，支援失能程度較高之個案。',
+        mid: '持續參與第三型全日日照，透過團隊合作調整照護介入並追蹤健康變化。',
+        long: '長期使用第三型全日日照，維持生活品質並記錄照護成效，協助家屬掌握狀況與資源。'
+      },
+      {
+        code: 'BB06',
+        name: '日間照顧（半日）—第三型',
+        short: '安排第三型半日型日間照顧，提供高照護密度的生活協助與訓練，確保安全參與。',
+        mid: '持續參與第三型半日日照，依健康狀況調整照護重點並提供家屬教學。',
+        long: '長期使用第三型半日日照，維持生活功能與情緒穩定，減輕照顧者負擔。'
+      },
+      {
+        code: 'BB07',
+        name: '日間照顧（全日）—第四型',
+        short: '安排第四型全日型日間照顧，結合專業照護與復能活動，支援複合型需求者。',
+        mid: '持續參與第四型全日日照，團隊整合護理、復健與社交活動，滾動調整照護。',
+        long: '長期使用第四型全日日照，建立跨專業照護模式，維持健康與社交參與。'
+      },
+      {
+        code: 'BB08',
+        name: '日間照顧（半日）—第四型',
+        short: '安排第四型半日型日間照顧，提供複合照護需求者短時段支持與團體參與。',
+        mid: '持續參與第四型半日日照，透過團隊監測健康與行為變化並提供策略。',
+        long: '長期使用第四型半日日照，維持功能並支援家屬銜接照顧計畫。'
+      },
+      {
+        code: 'BB09',
+        name: '日間照顧（全日）—第五型',
+        short: '安排第五型全日型日間照顧，提供高度照護與醫療協調，支援複雜照護需求。',
+        mid: '持續參與第五型全日日照，團隊密切觀察病情並調整照護流程。',
+        long: '長期使用第五型全日日照，確保醫療與社會資源串連，維持生活品質。'
+      },
+      {
+        code: 'BB10',
+        name: '日間照顧（半日）—第五型',
+        short: '安排第五型半日型日間照顧，提供密集照護與醫療銜接，確保安全參與。',
+        mid: '持續參與第五型半日日照，透過團隊協調追蹤健康並提供照護建議。',
+        long: '長期使用第五型半日日照，穩定功能並支援家庭照顧安排。'
+      },
+      {
+        code: 'BB11',
+        name: '日間照顧（全日）—第六型',
+        short: '安排第六型全日型日間照顧，整合專業照護、醫療協調與行為管理，支援高度失能或失智者。',
+        mid: '持續參與第六型全日日照，團隊依病程調整照護策略並與家屬緊密合作。',
+        long: '長期使用第六型全日日照，維持安全環境與照護紀錄，協助家庭落實長期支持。'
+      },
+      {
+        code: 'BB12',
+        name: '日間照顧（半日）—第六型',
+        short: '安排第六型半日型日間照顧，提供高強度照護與行為支持，協助家庭喘息。',
+        mid: '持續參與第六型半日日照，團隊即時回饋健康與行為變化，協助家屬調整。',
+        long: '長期使用第六型半日日照，維持生活品質並減少家庭照護壓力。'
+      },
+      {
+        code: 'BB13',
+        name: '日間照顧（全日）—第七型',
+        short: '安排第七型全日型日間照顧，結合專業醫護、復能與安全監測，支援極高照護需求者。',
+        mid: '持續參與第七型全日日照，團隊跨專業合作掌握病況並調整計畫。',
+        long: '長期使用第七型全日日照，確保高度照護需求獲得穩定支持並維持生活品質。'
+      },
+      {
+        code: 'BB14',
+        name: '日間照顧（半日）—第七型',
+        short: '安排第七型半日型日間照顧，提供極高照護需求者短時段專業支持與安全陪伴。',
+        mid: '持續參與第七型半日日照，團隊密切掌握身心狀況並回饋照護建議。',
+        long: '長期使用第七型半日日照，協助家庭維持高需求個案之照護品質。'
       },
       {
         code: 'BD01',
@@ -3405,14 +3489,14 @@
     const PROFESSIONAL_SERVICE_ITEMS = [
       {
         code: 'CA07',
-        name: 'IADLs／ADLs 復能照護',
+        name: 'IADLs/ADLs 復能照護',
         short: '完成功能與生活能力初評，並與個案及家屬討論復能重點，擬定個別化計畫。安排基本日常活動訓練（如穿衣、如廁、進食、移位），由專業人員示範並記錄進展，協助個案建立參與信心。',
         mid: '持續執行復能計畫，逐步增加活動強度與複雜度，並透過專業人員監測功能變化。個案能在協助下完成部分日常活動，並透過重複練習提升耐力與技巧。家屬將接受照護技巧指導，以在居家情境中延續復能訓練。',
         long: '個案能穩定完成復能計畫中多數的日常生活活動，並逐步減少協助需求。透過規律性訓練維持自理能力，避免退化；服務單位定期檢核成果，將改善情況與困難處回饋家屬，並滾動修正計畫內容。'
       },
       {
         code: 'CA08',
-        name: '個別化服務計畫（ISP）',
+        name: '個別化服務計畫（ISP）擬定與執行',
         short: '完成個案功能與心理社交評估，並與家屬討論需求。擬定個別化服務計畫，涵蓋生活自理、人際互動、社交技巧、休閒與健康促進等面向，設定近期可達成之行為與生活目標。',
         mid: '穩定執行 ISP，逐步提升個案生活自理能力，並參與社交與休閒活動。由專業人員持續追蹤效果，針對退化或困難項目調整策略，並提供家屬支持與訓練，使家庭能共同配合服務計畫。',
         long: '透過持續執行 ISP，協助個案維持並強化自理功能與社會參與，延緩退化。服務單位將依據評估結果與家屬回饋，定期修正與優化計畫，確保個案在生活、健康與社交等層面均獲得持續支持。'
@@ -3465,7 +3549,7 @@
     const TRANSPORT_SERVICE_ITEMS = [
       {
         code: 'DA01',
-        name: '交通接送服務',
+        name: '交通接送（就醫/復健/透析）',
         short: '個案將開始使用交通接送服務，協助往返居家與醫療院所、復健中心或透析治療地點。服務提供單位安排具職業駕照之駕駛，並於上車及下車過程給予必要的協助，確保安全。透過此服務，個案能準時參與治療與檢查，減少因交通不便而影響就醫之情況，並協助家屬減輕接送壓力。',
         mid: '個案已能穩定使用交通接送服務完成定期就醫與復健治療，行程安排逐步固定化。服務單位將持續追蹤準點率與安全性，並在必要時進行路線或時間調整，以符合醫療需求。服務人員在接送過程中同時觀察個案身體狀況，如發現異常將即時回報，確保醫療銜接不中斷。',
         long: '個案能長期規律地透過交通接送服務完成就醫、復健或透析，維持治療連續性。服務單位建立完善的交通排程與紀錄制度，確保安全、準時並提升使用滿意度。藉由穩定的接送服務，降低家屬長期負擔，並支持個案健康狀態維持與醫療成效之落實。'
@@ -3476,14 +3560,14 @@
     const RESPITE_SERVICE_ITEMS = [
       {
         code: 'GA03',
-        name: '日間照顧中心喘息服務－全日',
+        name: '日間照顧中心喘息—全日',
         short: '個案將開始使用日間照顧中心全日喘息服務，服務內容包含生活起居協助（更衣、如廁、移位）、護理照護（服藥管理、健康監測）、協助沐浴、餐食供應與進食協助，以及文康休閒活動的參與。服務期間含交通接送，確保個案能準時到達與返家。此階段的重點在於協助個案熟悉中心環境與人員，建立規律的日間生活型態，並讓主要照顧者獲得整日的休息與喘息機會。',
         mid: '個案能穩定出席全日喘息服務，並逐步建立參與日間活動的習慣。服務單位將持續監測健康狀況（如血壓、血糖、營養狀態），確保進食與服藥安全，並透過規律的文康休閒活動提升認知與情緒狀態。同時，服務團隊將定期與家屬溝通，提供健康與生活回饋，幫助家屬在居家時延續照護品質。',
         long: '個案能長期規律使用全日喘息服務，並在安全環境中維持生活自理功能與社交參與。服務單位會建立完整的照顧紀錄（出席率、健康檢視、活動參與度），定期檢討照顧成果並回饋給家屬。透過長期喘息支持，不僅能延緩個案退化，也能有效降低家庭主要照顧者的負荷，達到長期穩定的支持系統。'
       },
       {
         code: 'GA04',
-        name: '日間照顧中心喘息服務－半日',
+        name: '日間照顧中心喘息—半日',
         short: '個案將使用日間照顧中心半日喘息服務，接受生活照顧（移位、如廁、整潔協助）、護理照護、餐食供應與進食協助，以及文康休閒活動參與。含交通接送，以減少家屬接送負擔，並提供主要照顧者半日的休息時段。',
         mid: '個案能穩定參與半日服務，保持生活照顧品質與日常活動參與。服務單位持續觀察健康狀況，確保餐食與用藥安全，並透過適當的活動安排維持社交互動與認知參與。家屬能獲得固定的喘息時間，以緩解長期照護壓力。',
         long: '個案能長期規律參與半日喘息服務，並在此環境中維持身體健康與社交參與，避免因長期居家而產生孤立或退化。服務單位將定期提供參與紀錄與健康追蹤，確保計畫成效，並與家屬保持溝通，共同支持長期照護安排。'
@@ -3497,21 +3581,21 @@
       },
       {
         code: 'GA06',
-        name: '小規模多機能服務夜間喘息',
+        name: '小規模多機能—夜間喘息',
         short: '個案於夜間（18:00–08:00）至小規模多機能中心接受喘息服務，由工作人員提供夜間生活照顧（如如廁、翻身、進食）、服藥管理、沐浴及住宿。此安排讓主要照顧者能獲得夜間睡眠與休息，減少長期疲憊。',
         mid: '個案能穩定參與夜間喘息，服務單位將持續監測夜間睡眠品質、排泄與行動安全，避免跌倒或夜間意外事件。主要照顧者能透過固定的夜間休息，改善身心狀態並提升白天照護品質。',
         long: '長期使用夜間喘息服務，個案能維持規律作息，健康狀態穩定，並避免夜間失能惡化或安全事件發生。服務單位將建立夜間照護紀錄，並定期與家屬檢討，確保照護策略與家庭需求一致。'
       },
       {
         code: 'GA07',
-        name: '巷弄長照站喘息服務',
+        name: '巷弄長照站喘息（時）',
         short: '個案將至巷弄長照站接受短時段喘息服務，內容包含進食、服藥協助及簡單活動安排。此服務能讓主要照顧者獲得暫時喘息，減輕即時負擔。',
         mid: '個案能穩定參與巷弄長照站活動，維持基本社交互動與日常生活規律。照顧者可在此期間獲得喘息，並透過服務紀錄了解個案狀況，增進家庭照護信心。',
         long: '長期規律使用巷弄長照站喘息，個案能透過社區互動維持身心功能，避免孤立與退化。服務單位會定期提供健康與參與回饋，協助家屬規劃長期照顧。'
       },
       {
         code: 'GA09',
-        name: '居家喘息服務',
+        name: '居家喘息服務（2小時為一單位）',
         short: '由受過專業訓練之照顧服務員至個案家中，提供如廁、沐浴、更衣、進食、服藥、翻身拍背、肢體活動與上下床協助等照顧。此安排能讓主要照顧者即時獲得休息，並確保個案於熟悉環境中獲得基本生活支持。',
         mid: '穩定使用居家喘息，服務員能熟悉個案需求並提供規律照顧，確保衛生、營養及安全。服務過程中觀察並記錄個案狀況，若有異常立即回報，讓家屬在喘息同時也能掌握健康狀況。',
         long: '長期規律安排居家喘息，個案能在熟悉環境中獲得持續照顧，維持生活品質並避免功能退化或照護缺口。服務單位將建立完整紀錄，定期與家屬討論成效，確保家庭照護與喘息服務能長期銜接與互補。'
@@ -3942,7 +4026,7 @@
       switch(cat){
         case 'B': return 'B碼服務（居家／日照）';
         case 'C': return 'C碼專業服務';
-        case 'D': return 'D碼／交通服務';
+        case 'D': return 'D碼／交通接送';
         case 'EF': return 'E.F碼（輔具與無障礙補助）';
         case 'G': return 'G碼（喘息服務）';
         case 'SC': return 'SC碼（短期照顧）';
@@ -4629,7 +4713,7 @@
       const hasHomeCare = selected.includes('居家服務');
       const hasDayCare = selected.includes('日間照顧');
       const hasProf = selected.includes('專業服務');
-      const hasCar  = selected.includes('交通服務');
+      const hasCar  = selected.includes('交通接送');
       const hasResp = selected.includes('喘息服務');
       const hasAcc  = selected.includes('無障礙及輔具');
       const hasMeal = selected.includes('營養送餐');
@@ -4898,7 +4982,7 @@
         carLong.forEach(line=>carSummary.push(`長期：${line}`));
       }
       if(carSummary.length){
-        sections.push('交通服務：');
+        sections.push('交通接送：');
         carSummary.forEach(line=>sections.push(`- ${line}`));
       }
 
@@ -5006,7 +5090,7 @@
         [
           ['照顧服務','short_care'],
           ['專業服務','short_prof'],
-          ['交通服務','short_car'],
+          ['交通接送','short_car'],
           ['喘息服務','short_resp'],
           ['無障礙及輔具','short_access'],
           ['營養送餐','short_meal']
@@ -5019,7 +5103,7 @@
         [
           ['照顧服務','mid_care'],
           ['專業服務','mid_prof'],
-          ['交通服務','mid_car'],
+          ['交通接送','mid_car'],
           ['喘息服務','mid_resp'],
           ['無障礙及輔具','mid_access'],
           ['營養送餐','mid_meal']
@@ -5030,7 +5114,7 @@
       }else if(period==='long'){
         heading='(四) 長期目標（4–6 個月）';
         const longMap = parseLongGoalForPreview();
-        ['照顧服務','專業服務','交通服務','喘息服務','無障礙及輔具','營養送餐'].forEach(label=>{
+        ['照顧服務','專業服務','交通接送','喘息服務','無障礙及輔具','營養送餐'].forEach(label=>{
           const lines = longMap[label] || [];
           if(lines.length) categories.push({label, lines});
         });
